--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^7.3",
-        "ext-json": "^1.7",
+        "ext-json": ">=1.7",
         "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
