--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
     ],
     "require": {
         "php": "^7.3",
-        "ext-json": ">=1.7",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpunit/phpunit": "^9.0",
-        "vimeo/psalm": "^3.11"
+        "vimeo/psalm": "^3.11",
+        "ext-calendar": "*"
     },
     "autoload": {
         "psr-4": {
